# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  README.md
Engine/: Engine.vcxproj
Engine/src/maths/: vector2.cpp  vector3.cpp
Engine/src/opengl/: element_buffer.cpp  program.cpp  shader.cpp  shader.h
Game/: Game.vcxproj  Game.vcxproj.filters
Game/assets/shaders/: default.frag  default.vert
Game/src/: main.cpp  main.h
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine/assets/shaders/: default.frag  default.vert
GameEngine/src/: engine.cpp  engine.h  main.cpp  main.h
GameEngine/src/components/: transform.h
GameEngine/src/maths/: maths.h  matrix4.cpp  matrix4.h  transformation.cpp  transformation.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
GameEngine/src/objects/: camera.h
GameEngine/src/opengl/: element_buffer.cpp  element_buffer.h  program.cpp  program.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
GameEngine/src/shaders/: default.frag  default.vert
GameEngine/src/systems/: renderer.h
src/: engine.cpp  engine.h
src/components/: camera.cpp  camera.h  sprite.cpp  sprite.h  transform.cpp  transform.h
src/core/: core.h
src/maths/: colour.cpp  colour.h  maths.h  matrix4.cpp  matrix4.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/opengl/: element_buffer.cpp  element_buffer.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/systems/: renderer.cpp  renderer.h  window.cpp  window.h
src/utils/: debug.h
